Istio/Azure/config/orig_backup/price-service-azure-dev/price-service-deployment-azure.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: price-service
  labels:
    app: price-service
    version: v1
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http-priceservice
  selector:
    app: price-service
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: price-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-service
  template:
    metadata:
      labels:
        app: price-service
        version: v1
    spec:
      containers:
      - name: price-service
        image: acrwedevgupuy7.azurecr.io/apimgt/price-service:1.0.167-SNAPSHOT
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: certs
          mountPath: "/etc/certs"
          readOnly: true
        resources:
          requests:
            cpu: 500m
            memory: 200Mi
        #livenessProbe:
        #  httpGet:
        #    path: /actuator/health
        #    port: 8080
        #    scheme: HTTP
        #  initialDelaySeconds: 30
        #  periodSeconds: 120
        #  successThreshold: 1
        #readinessProbe:
        #  httpGet:
        #    path: /actuator/info
        #    port: 8080
        #    scheme: HTTP
        #  initialDelaySeconds: 10
        #  periodSeconds: 5
        #  successThreshold: 3
      volumes:
      - name: certs
        secret:
          secretName: istio.default
